--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple client management api",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/agildav/clientkeeper-api/issues"
   },
-  "homepage": "https://github.com/agildav/clientkeeper-api#readme"
+  "homepage": "https://github.com/agildav/clientkeeper-api#readme",
+  "dependencies": {
+    "express": "^4.16.3",
+    "mongojs": "^2.6.0"
+  }
 }
